Fixed bug reseting chart when resuming a measurement.

--- a/SensorMax/res/values/strings.xml
+++ b/SensorMax/res/values/strings.xml
@@ -217,7 +217,7 @@
         Herstellerseite&lt;/a&gt;
     	&lt;br /&gt;
     </string>
-    <string name="infotext_step_counter">TODO</string>
+    <string name="infotext_step_counter"></string>
 	<string name="home_info">
 	    Vielen Dank, dass Du SensorMax auf deinem Smartphone installiert hast!&lt;br /&gt;
 	    Dein Smartphone ist nun ein leistungsfähiges Messgerät :)&lt;br /&gt;
